# filego-rs

./: .env-sample  .gitignore  README.md
.github/workflows/: build.yml  build_on_push.yml
client/: .gitignore  package-lock.json  package.json  rspack.config.js  tsconfig.json
client/config/: webpack.config.js
client/public/: index.html
client/scripts/: update-icon.sh
client/src/: App.less  App.tsx  index.css  routers.tsx  theme.less  theme.ts
client/src/apis/: auth.ts  file.ts  utils.ts
client/src/components/button/: index.module.less  index.tsx
client/src/components/icon/: icon.tsx
client/src/components/modal/: index.module.less  index.tsx
client/src/hooks/: common.ts
client/src/icons/: icons.js
client/src/store/: index.tsx
client/src/utils/: formatter.ts
server/: Cargo.toml  app.db  config.toml
server/files/: 1234.json  222.json
server/migrations/2023-02-05-095036_create_users/: up.sql
server/migrations/2023-03-04-082724_create_gallery/: down.sql  up.sql
server/src/: config.rs  main.rs  middlewares.rs  models.rs  routers.rs  schedulers.rs  schema.rs
server/src/middlewares/: csrf.rs  guard.rs  session.rs  static_server.rs
server/src/routers/: auth.rs  fs.rs  gallery.rs  index.rs
server/src/schedulers/: update_file_index.rs  update_gallery.rs
server/src/utils/: auth.rs  doc_parser.rs  error.rs  gallery.rs  mod.rs  parser.rs  path.rs  performance.rs  response.rs  search_engine.rs  session.rs  stream.rs  transform.rs  vfs.rs
server/static/: asset-manifest.json  index.html
server/static/static/js/: main.7ade1f16.js.map
(+27 files in other folders)
