[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1", features = ["derive", "alloc", "rc"] }
tokio = { version = "1.23.0", features = ["full"] }
diesel = { version = "2", features = ["sqlite"] }
actix-web = "4"
serde_json = "1.0.92"
mime_guess = "2.0.4"
actix-multipart = "0.5.0"
awmp = "0.8.1"
futures = "0.3.26"
crossbeam-channel = "0.5.6"
tokio-util = "0.7.4"
regex = "1.7.1"
lazy_static = "1.4.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
sha256 = "1.1.1"
image = "0.24.5"
env_logger = "0.10.0"
actix-files = "0.6.2"
mixin = "0.2.0"
diesel_migrations = "2.0.0"
async-recursion = "1.0.2"
async_zip = { version = "0.0.11", features = ["full"] }
include_dir = "0.7.3"
futures-util = "0.3.26"
percent-encoding = "2.2.0"
pin-project-lite = "0.2.9"
tracing = { version = "0.1.37", features = ["default"] }
tracing-subscriber = "0.3.16"

[dependencies.ffmpeg_cli_utils]
git = "https://github.com/hjylxmhzq/ffmpeg-cli-utils.git"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
default = ["ffmpeg"]
ffmpeg = []
